{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "14dd2dce-a3d9-42d5-9397-14cbab4de7bc",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "624c40c7-30bb-428e-b8ad-fdd6367967a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4e3a9d2e-2902-4665-8a50-158013e5bca3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeCameraStyle",
                    "type": "Button",
                    "id": "8fef37f6-9ef3-4555-92c5-2e4963e1e43b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetRunning",
                    "type": "Button",
                    "id": "1f4284b1-e3e1-4e5f-9256-bec87df5c23d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BasePunches",
                    "type": "Button",
                    "id": "2a5576c7-423a-4063-b960-52dd92b8cb18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "e9a5ab47-c489-4867-9dd0-75877e819784",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "809ef3d3-a416-48f1-a3db-7f12b1551088",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7b1988dd-c8e0-4039-bae1-591fb875e560",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "16fb7fd5-cbda-4c32-84c7-4a86c7ede691",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "91ecbdae-d559-4b9f-b5ea-2ebc93472cf6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c3ca9c9d-20f3-4655-ae64-ca3733a1590c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0169b9c0-92c3-4207-9dad-414dc3c442b2",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeCameraStyle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca35b737-5a3f-447e-b1c5-2bb88a4af83b",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SetRunning",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e716f28-ccd4-401f-bf88-c3807a6ce459",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasePunches",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "StarPlatinum",
            "id": "732774c3-05ac-439f-9bd9-c40d55b65801",
            "actions": [
                {
                    "name": "Summon",
                    "type": "Button",
                    "id": "8f297c47-5b95-4b1c-a045-7aea21c20c00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BasePunches",
                    "type": "Button",
                    "id": "277f5f43-755b-43fc-a572-42cb1f286957",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "01280c57-7878-41dc-95e1-76e3321105a4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Summon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09df84e6-82c8-42a9-bb2f-1787b595765d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasePunches",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}